--- a/sapui5walkthrough/webapp/manifest.json
+++ b/sapui5walkthrough/webapp/manifest.json
@@ -47,7 +47,11 @@
         "settings": {
           "bundleName": "mindset.curtiskettler.sapui5walkthrough.sapui5walkthrough.i18n.i18n"
         }
-      }
+      },
+      "invoice": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "Invoices.json"
+        }
     },
     "resources": {
       "css": [
