--- a/sapui5walkthrough/webapp/manifest.json
+++ b/sapui5walkthrough/webapp/manifest.json
@@ -10,8 +10,14 @@
     "title": "{{appTitle}}",
     "description": "{{appDescription}}",
     "dataSources": {
-     
-    }
+			"invoiceRemote": {
+				"uri": "https://services.odata.org/V2/Northwind/Northwind.svc/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			}
+		}
   },
   "sap.ui": {
     "technology": "UI5",
@@ -49,8 +55,7 @@
         }
       },
       "invoice": {
-        "type": "sap.ui.model.json.JSONModel",
-        "uri": "Invoices.json"
+        "dataSource": "invoiceRemote"
         }
     },
     "resources": {
