added routes and targets to manifest

--- a/sapui5walkthrough/webapp/manifest.json
+++ b/sapui5walkthrough/webapp/manifest.json
@@ -77,20 +77,27 @@
       },
       "routes": [
         {
-          "name": "RouteView1",
-          "pattern": "RouteView1",
-          "target": [
-            "TargetView1"
-          ]
+          "name": "overview",
+          "pattern": "",
+          "target": "overview"
+        },
+        {
+          "name": "detail",
+          "pattern": "detail",
+          "target": "detail"
         }
       ],
       "targets": {
-        "TargetView1": {
+        "overview": {
           "viewType": "XML",
           "transition": "slide",
           "clearControlAggregation": false,
-          "viewId": "View1",
-          "viewName": "View1"
+          "viewId": "overview",
+          "viewName": "overview"
+        },
+        "detail": {
+          "id": "detail",
+          "name": "detail"
         }
       }
     },
